--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://www.nittch.fr/"
 theme = "LoveIt"
 
 defaultContentLanguage = "en"
-languageCode = "en"
+languageCode = "en-us"
 languageName = "english"
 
 title = "www.nittch.fr"
@@ -22,12 +22,24 @@ enableEmoji = true
 [menu]
   [[menu.main]]
     weight = 1
+    identifier = "Posts"
+    name = "Posts"
+    url = "/posts/"
+
+  [[menu.main]]
+    weight = 2
+    identifier = "Categories"
+    name = "Categories"
+    url = "/categories/"
+
+  [[menu.main]]
+    weight = 3
     identifier = "networks"
     name = "My networks"
     url = "/networks/"
 
+
 [params]
-  defaultTheme = "light"
   gitRepo = "https://github.com/nittch/www_nittch_fr/"
   dateFormat = "01/02/2006"
   title = "www.nittch.fr"
@@ -50,4 +62,5 @@ enableEmoji = true
   discord = "nittch"
   email = "nittch@linkea.org"
   twitter = "nittch"
+  rss = "https://www.nittch.fr/index.xml"
 
