Switching share feature : twitter, linkedin, reddit

--- a/config.toml
+++ b/config.toml
@@ -48,11 +48,15 @@ enableEmoji = true
 [params.header.title]
   name = "Nittch's projects"
 
+[params.footer]
+  hugo = false
+  since = 2023
+
 [params.home.profile]
   gravatarEmail = "nittch@linkea.org"
   title = "Nittch<br />Nicolas TANDÉ"
   subtitle = "<p>Virtual Reality, Flight Simulation, Simracing<br />C++ Development, Operating Systems, Sysadmin, Network<br />...And <u><a href=/categories>more</a></u></p><p>Cumulogranite.fr, Eiders.fr, Exploreurs Imaginaires</p>More details on <u><a href=/aboutme>About me</a></u> page (contains professional links)"
-  disclaimer = "Follow me by <u><a href=https://www.nittch.fr/index.xml target=_blank>RSS</a></u>"
+  disclaimer = "Follow me: <u><a href=https://www.nittch.fr/index.xml target=_blank>RSS</a></u> / <u><a href=https://twitter.com/nittch target=_blank>X(Twitter)</a></u><br />Support me on <u><a href=https://ko-fi.com/nittch target=_blank>Ko-fi</a></u>"
   typeit = false
 
 [params.social]
@@ -65,3 +69,11 @@ enableEmoji = true
   twitter = "nittch"
   rss = "https://www.nittch.fr/index.xml"
 
+[params.page.share]
+  Twitter = true
+  Facebook = false
+  Linkedin = true
+  Reddit = true
+  HackerNews = false
+  Line = false
+  Weibo = false
