Reworking about me (focussed on important links)

--- a/config.toml
+++ b/config.toml
@@ -56,16 +56,16 @@ enableEmoji = true
   gravatarEmail = "nittch@linkea.org"
   title = "Nittch<br />Nicolas TANDÉ"
   subtitle = "<p>Virtual Reality: World Hopping, Photography<br />Flight Simulation<br />Senior Software Developer: C++ Expert, Agility</p>More details on <u><a href=/aboutme>About me</a></u> page (contains professional links)"
-  disclaimer = "Follow me: <u><a href=https://www.nittch.fr/index.xml target=_blank>RSS</a></u> / <u><a href=https://twitter.com/nittch target=_blank>X(Twitter)</a></u><br />Support me on <u><a href=https://ko-fi.com/nittch target=_blank>Ko-fi</a></u>"
+  #disclaimer = "Follow me: <u><a href=https://www.nittch.fr/index.xml target=_blank>RSS</a></u> / <u><a href=https://twitter.com/nittch target=_blank>X(Twitter)</a></u><br />Support me on <u><a href=https://ko-fi.com/nittch target=_blank>Ko-fi</a></u>"
   typeit = false
 
 [params.social]
-  linkedin = "nicolastande"
-  github = "nittch"
-  thingiverse = "nittch"
+  #linkedin = "nicolastande"
+  #github = "nittch"
+  #thingiverse = "nittch"
   instagram = "nittch_wired"
-  discord = "nittch"
-  email = "nittch@linkea.org"
+  #discord = "nittch"
+  #email = "nittch@linkea.org"
   twitter = "nittch"
   rss = "https://www.nittch.fr/index.xml"
 
